plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok:1.18.32'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	// MyBatis Starter
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.slf4j:slf4j-api:2.0.0'  
	
	
	//시큐리티...
	implementation 'org.springframework.boot:spring-boot-starter-mustache'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MySQL

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    	  
	
	
	
	
	
	
	
	
	
	//스프링 시큐리티
	//implementation 'org.springframework.boot:spring-boot-starter-security'
	//implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.0'
	
	//implementation 'org.springframework.boot:spring-boot-starter-security'
    //implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'   
	
	//스프링 시큐리티
	//implementation 'org.springframework.boot:spring-boot-starter-security'
	//implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.0'
	
	//implementation 'org.springframework.boot:spring-boot-starter-security'
    //implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    //implementation 'jakarta.platform:jakarta.jakartaee-api:9.1.0'
    //implementation 'org.hibernate:hibernate-core:6.6.4.Final'
	
	// jwt
	//implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // JWT 표준 API
	//runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // 실제 구현체 (JWT 생성,서명,검증 기능)
	//runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JWT 페이로드를 JSON 형식으로 처리
	
	implementation 'ch.qos.logback:logback-classic:1.3.0'
	
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}
